2010-07-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h   [Bug 3031278] fixed merge problem in previous commit.

2010-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h   [Bug 3030870] make itcl 3.x built with pre-8.6 work in 8.6
	* generic/tclInt.h

2010-07-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h   (Backport) take over definitions of _WIN32,
	DLLIMPORT, DLLEXPORT and TCL_LL_MODIFIER macros from Tcl8.5/8.6

2010-06-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclPosixStr.c   [Bug 3019634] errno.h and tclWinPort.h have
	conflicting definitions.

2010-06-09  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Added OSX Intel 64bit
	* library/platform/pkgIndex.tcl: Package updated to version 1.0.9.

2010-05-07  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Fix cpu name for Solaris/Intel 64bit.
	* library/platform/pkgIndex.tcl: Package updated to version 1.0.8.

2010-04-29  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Another stab at getting the /lib,
	* library/platform/pkgIndex.tcl: /lib64 difference right for
	linux. Package updated to version 1.0.7.

2010-04-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/unset.n: [Bug 2988940]: Fix typo.

2010-04-14  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Linux platform identification:
	* library/platform/pkgIndex.tcl: Check /lib64 for existence of
	files matching libc* before accepting it as base directory. This
	can happen on weirdly installed 32bit systems which have an empty
	or partially filled /lib64 without an actual libc. Bumped to
	version 1.0.6.

2010-04-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd): fixed object leak.

2010-04-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling